updating buildspec and squashing webpack bugs

--- a/src/components/FrontPage/index.scss
+++ b/src/components/FrontPage/index.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Tovari Sans';
-  src: url('/src/assets/fonts/TovariSans.ttf');
+  src: url('../../assets/fonts/TovariSans.ttf');
 }
 
 #front-page {
